--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <h4>Store</h4>
                 <h4>Let's chat <i class="ri-arrow-right-up-line"></i></h4>
             </div>
+            <i id="menuIcon"class="ri-menu-3-fill"></i>
         </div>
         <div id="content">
             <h3>Hello! I'm llya.</h3>
